# widgets

./: CLAUDE.md  Cargo.toml  Makefile  README.md  bench.sh
evoke/: Cargo.toml
evoke/src/: main.rs
grimoire/: Cargo.toml  Makefile
grimoire/src/: main.rs
panel/: CLAUDE.md  Cargo.toml  Makefile
panel/src/: main.rs
raven/: Cargo.toml  Makefile
raven/src/: main.rs
stele/: Cargo.toml  Makefile
stele/src/: main.rs
wallrun/: CLAUDE.md  Cargo.toml  Makefile  wallrun.md
wallrun/src/: main.rs
wavedash/: Cargo.toml
wavedash/src/: main.rs
