[package]
name = "evoke"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.181"
serde = { version = "1", features = ["derive"] }
smithay-client-toolkit = { version = "0.20.0", features = ["calloop"] }
tiny-skia = "0.12.0"
toml = "0.8"
wayland-client = "0.31.12"
whisper-rs = { version = "0.16", features = ["cuda"] }
